# ollvm-plugins

./: .gdb_history  .gitignore  .gitmodules  ALLpass.md  CMakeLists.txt  CMakePresets.json  activation_log.txt  checklib.cpp  com.sh  encheck copy.py  encheck.py  hook.c  log.md  main.cpp  my.cpp  runtime.sh  test copy 3.cpp  test copy.c  test.cpp  test.ll  test_protected  testhook.c  ttt.cpp
SsagePass/Obfuscation/: CMakeLists.txt
SsagePass/Obfuscation/include/: CryptoUtils.h  Flattening.h  FunctionWrapper.h  IndirectBranch.h  IndirectCall.h  IntegrityCheck.h  LegacyLowerSwitch.h  MBAObfuscation.h  SplitBasicBlock.h  StringEncryption.h  TSXProtect.h  Utils.h  VMFlatten.h  crypto_runtime.h
SsagePass/Obfuscation/include/compat/: CallSite.h
SsagePass/Obfuscation/src/: BogusControlFlow.cpp  CryptoUtils.cpp  Flattening.cpp  FlatteningEnhanced.cpp  FunctionWrapper.cpp  IPObfuscationContext.cpp  IndirectBranch.cpp  IndirectCall.cpp  IntegrityCheck.cpp  LegacyLowerSwitch.cpp  MBAObfuscation.cpp  MBAUtils.cpp  PMRegistration.cpp  SplitBasicBlock.cpp  StringEncryption.cpp  TSXProtect.cpp  Utils.cpp  VMFlatten.cpp  crypto_runtime.cpp  main.cpp  rand_funcs.txt
back/: VMFlattenwithoutsafe.cpp  main copy 2.cpp  main copy.cpp
back/main/: test copy.cpp
build_crypto_runtime/: CMakeCache.txt  CMakeLists.txt
script/: com_tsx.sh
